--- a/GlobalStoreTester530/GlobalStoreTester/Info.plist
+++ b/GlobalStoreTester530/GlobalStoreTester/Info.plist
@@ -30,6 +30,10 @@
 	<true/>
 	<key>SFDCOAuthLoginHost</key>
 	<string>login.salesforce.com</string>
+    <key>UILaunchStoryboardName</key>
+    <string>LaunchScreen</string>
+    <key>UIMainStoryboardFile</key>
+    <string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
