--- a/GlobalStoreTester530/Podfile
+++ b/GlobalStoreTester530/Podfile
@@ -8,7 +8,7 @@ source 'https://github.com/CocoaPods/Specs.git'
 use_frameworks!
 
 # NB: get rid of next line once FMDB works with xcode 9
-pod 'FMDB', :git => 'https://github.com/forcedotcom/fmdb', :branch => '2.7.2_xcode9' 
+# pod 'FMDB', :git => 'https://github.com/forcedotcom/fmdb', :branch => '2.7.2_xcode9' 
 
 pod 'SalesforceAnalytics', :path => 'mobile_sdk/SalesforceMobileSDK-iOS'
 pod 'SalesforceSDKCore', :path => 'mobile_sdk/SalesforceMobileSDK-iOS'
